[package]
edition = "2021"
name = "cutekit"
version = "0.1.3"

[dependencies]
dirs = "6.0.0"
etc-passwd = "0.2.0"
eyre = "0.6.12"
figment = { version = "0.10.18", features = ["toml"] }
gtk4 = { version = "0.9.6", features = ["v4_16"] }
gtk4-layer-shell = "0.5.0"
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "std",
  "fmt",
  "env-filter",
  "ansi",
] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
